--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.2",
-    "nodemon": "^3.0.1",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
+  },  
+  "devDependencies": {
+    "nodemon": "^2.0.19"
   }
 }
