--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,7 +23,7 @@
     "mongoose": "^7.3.2",
     "uuid": "^9.0.0",
     "ws": "^8.13.0"
-  },  
+  },
   "devDependencies": {
     "nodemon": "^2.0.19"
   }
